--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	
 		<!-- Site Name, Title, and Description to be displayed -->
 	<meta property="og:site_name" content="Innovalab">
-	<meta property="og:title" content="Centro de Innovación y Emprendimiento - Santa María">
-	<meta property="og:description" content="Nube de puntos del centro poblado Centro Fuerte - Loreto, realizado por el laboratorio Innovalab con ❤️ y potree">
+	<meta property="og:title" content="Centro Fuerte - Loreto">
+	<meta property="og:description" content="Nube de puntos del centro poblado Centro Fuerte - Loreto, realizado por el laboratorio Innovación en Salud junto con la Gerencia Regional de Salud de Iquitos">
 	
 	<!-- Image to display -->
 	<!-- Replace   «example.com/image01.jpg» with your own -->
@@ -41,7 +41,7 @@
 	<!-- Website to visit when clicked in fb or WhatsApp-->
 	<meta property="og:url" content="https://www.innovalab.info/">
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://user-images.githubusercontent.com/23284899/250298913-68589632-f340-4caa-8ecd-d48e375cda8a.JPG" />
+	<meta property="og:image" content="https://user-images.githubusercontent.com/23284899/250299935-602edc1f-b5e7-4ed6-8aa9-eedd94daad6f.png" />
 	<meta property="og:image:width" content="526" />
 	<meta property="og:image:height" content="275" />
 	<meta property="og:image:type" content="image/jpeg" />
